<!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Call Log</string>
    <string name="activity_name">Edit NP Number</string>

    <string name="spinner_title">Telecom</string>
    
    <string name="query_start">Query Start</string>
    <string name="query_end">Query End</string>
    <string name="telecom_corporation">Corporation</string>
    <string name="telecom_payment">Payment</string>
    <string name="telecom_intra_free">Intra Free</string>
    <string name="telecom_extra_free">Extra Free</string>
    <string name="telecom_localcall_free">LocalCall Free</string>
    <string name="telecom_intra">Intra</string>
    <string name="telecom_extra">Extra</string>
    <string name="telecom_localcall">LocalCall</string>
    <string name="telecom_intra_remains">Intra Remains</string>
    <string name="telecom_extra_remains">Extra Remains</string>
    <string name="telecom_localcall_remains">LocalCall Remains</string>
    <string name="telecom_intra_pay">Intra Pay</string>
    <string name="telecom_extra_pay">Extra Pay</string>
    <string name="telecom_localcall_pay">LocalCall Pay</string>
    <string name="btn_edit_np_num">Edit NP Number</string>
    <string name="np_num_type_intra_network">IntraNetWork</string>
    <string name="np_num_type_extra_network">ExtraNetWork</string>
    <string name="np_num_type_hotline">HotLine</string>
    <string name="dialog_confirm">Delete This Number</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="btn_text_add">Add</string>
    <string name="notify_text_duration">Duration</string>
    <string name="notify_text_date">Date</string>
    
</resources>
